style(input): overflow fix

--- a/src/styles/RepoSearch.scss
+++ b/src/styles/RepoSearch.scss
@@ -53,6 +53,7 @@
 
   max-height: 400px;
   overflow-y: auto;
+  overflow-x: hidden;
 
   .scrollbar-container {
     width: 5px !important;
